--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
 			</div>
 			
 			<div class="container">
-				<h3 class="h3-index">Search</h3>
-				<div class="row">
-					<div class="col-1"></div>
-					<div class="col-10">
+				<div class="row py-4">
+					<div class="col-2"></div>
+					<div class="col-8">
 						<div class="input-group">
 							<input class="form-control border-secondary py-2" type="search">
 							<div class="input-group-append">
@@ -137,12 +136,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-1"></div>
+					<div class="col-2"></div>
 				</div>
 			</div>	
 
-			<h3 class="h3-index">Latest News</h3>
 			<div class="container">
+				<h3 class="h3-index text-left">Latest News</h3>
 				<div class="row mb-2">
 				    <div class="col-md-6">
 				    	<div class="row news-column">
@@ -152,7 +151,7 @@
 							<div class="col">
 								<h4>Phones</h4>
 								<p>Samsung may have accidentally leaked the Galaxy S10 design.</p>
-								<a href=""><h6>Read more...</h6></a>
+								<a href="news/news.html"><h6>Read more...</h6></a>
 							</div>
 						</div>
 						<div class="row news-column">
@@ -174,7 +173,7 @@
 							<div class="col">
 								<h4>Laptops</h4>
 								<p>New Samsung Notebook 9 Pro blends power and style with affordability.</p>
-								<a href=""><h6>Read more...</h6></a>
+								<a href="news/news-2.html"><h6>Read more...</h6></a>
 							</div>
 						</div>
 						<div class="row news-column">
@@ -191,8 +190,7 @@
 				</div>
 			</div>
 
-			<h3 class="h3-index">Galaxy Discover</h3>
-			<div class="d-sm-none" style="margin: 30px">
+			<div class="d-sm-none py-2">
 				<div id="carousel" class="carousel slide text-center" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -201,13 +199,19 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<div class="carousel-item">
-						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 					<div class="carousel-item">
-						<iframe class="embed-responsive-item" width="400" height="225" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</div>
 				</div>
 				<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -222,13 +226,13 @@
 			</div>
 			<div class="row d-sm-flex d-none" style="margin: 0;">
 				<div class="col-4 embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
+					<iframe class="embed-responsive-item embed-responsive-16by9" src="https://www.youtube.com/embed/6z6FgdVKXFM" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="col-4 embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HNdOPzcD3wI" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="col-4  embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rjaL94yEJME" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>	
 		</main>
