--- a/device/phone.html
+++ b/device/phone.html
@@ -95,7 +95,7 @@
 		</header>
 		
 		<main>
-			<div class="container device-info">
+			<div class="container py-3 pt-4">
 				<h4 id="note">Galaxy Note series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
@@ -168,7 +168,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container device-info">
+			<div class="container pb-3">
 				<h4 id="s">Galaxy S series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
@@ -275,7 +275,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container device-info">
+			<div class="container pb-3">
 				<h4 id="a">Galaxy A series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
