--- a/account/cart.html
+++ b/account/cart.html
@@ -202,7 +202,7 @@
 						<tr>
 							<td colspan="3"></td>
 							<td class="text-center"><strong>Total $2109.96</strong></td>
-							<td><a href="#" class="btn btn-primary btn-block">Checkout</a></td>
+							<td><a href="bill.html" class="btn btn-primary btn-block">Checkout</a></td>
 						</tr>
 					</tfoot>
 				</table>
