--- a/account/register.html
+++ b/account/register.html
@@ -10,6 +10,8 @@
 
 		<title>Register - SAMfan Shop</title>
 		<link rel="shortcut icon" href="../samfan.ico">
+
+		<script src="https://www.google.com/recaptcha/api.js"></script>
 	</head>
 	
 	<body>
@@ -150,8 +152,11 @@
 							<label class="form-check-label">I agree to the <a href="#">Terms of Use</a>.</label>
 						</div>
 					</div>
-					<div class="text-center">
-						<button type="submit" class="btn btn-secondary signup">Sign Up</button>
+					<div class="row">
+						<div class="g-recaptcha col" data-sitekey="6Lfd4IgUAAAAAOOOkHihipmPwWCFQBRnYt0TwIUm"></div>
+						<div class="text-center col mt-3">
+							<button type="submit" class="btn btn-secondary signup">Sign Up</button>
+						</div>
 					</div>
 					<hr class="my-4">
 					<div class="row">
