--- a/account/bill.html
+++ b/account/bill.html
@@ -95,7 +95,7 @@
 		</header>
 		
 		<main>	
-			<div class="container py-5">
+			<div class="container py-4">
 				<div class="card">
 					<div class="card-header">
 						Invoice <b><em>11.01.2019</em></b>
@@ -110,7 +110,7 @@
 								<div>HCM City, Vietnam</div>
 								<div>Email: samfan@cf.com</div>
 							</div>
-							<div class="col-sm-6">
+							<div class="col-sm-6 text-right">
 								<h6 class="mt-1"><em>To:</em></h6>
 								<div><strong>Huy Nguyen Minh</strong></div>
 								<div>107/116 Quang Trung, Go Vap</div>
@@ -119,49 +119,49 @@
 							</div>
 						</div>
 						<div class="table-responsive-sm">
-							<table class="table table-striped">
+							<table class="table">
 								<thead>
 									<tr>
-										<th class="center">#</th>
-										<th>Item</th>
-										<th>Description</th>
-										<th class="right">Unit Cost</th>
-										<th class="center">Qty</th>
-										<th class="right">Total</th>
+										<th class="border-0 text-center">#</th>
+										<th class="border-0">Item</th>
+										<th class="border-0">Description</th>
+										<th class="border-0 text-center">Unit Cost</th>
+										<th class="border-0 text-center">Qty</th>
+										<th class="border-0 text-right">Total</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td class="center">1</td>
-										<td class="left strong">Galaxy Book</td>
-										<td class="left">New, SM-W620NZKAXAR.</td>
-										<td class="right">$999.99</td>
-										<td class="center">1</td>
-										<td class="right">$999.00</td>
+										<td class="text-center">1</td>
+										<td>Galaxy Book</td>
+										<td>New, SM-W620NZKAXAR.</td>
+										<td class="text-center">$999.99</td>
+										<td class="text-center">1</td>
+										<td class="text-right">$999.00</td>
 									</tr>
 									<tr>
-										<td class="center">2</td>
-										<td class="left">Galaxy Note8</td>
-										<td class="left">New, SM-N950UZVAXAA.</td>
-										<td class="right">$729.99</td>
-										<td class="center">1</td>
-										<td class="right">$729.99</td>
+										<td class="text-center">2</td>
+										<td>Galaxy Note8</td>
+										<td>New, SM-N950UZVAXAA.</td>
+										<td class="text-center">$729.99</td>
+										<td class="text-center">1</td>
+										<td class="text-right">$729.99</td>
 									</tr>
 									<tr>
-										<td class="center">3</td>
-										<td class="left">Gear S3 Frontier</td>
-										<td class="left">New, SM-R760NDAAXAR.</td>
-										<td class="right">$199.99</td>
-										<td class="center">1</td>
-										<td class="right">$199.99</td>
+										<td class="text-center">3</td>
+										<td>Gear S3 Frontier</td>
+										<td>New, SM-R760NDAAXAR.</td>
+										<td class="text-center">$199.99</td>
+										<td class="text-center">1</td>
+										<td class="text-right">$199.99</td>
 									</tr>
 									<tr>
-										<td class="center">4</td>
-										<td class="left">Gear IconX</td>
-										<td class="left">New, 2018 version.</td>
-										<td class="right">$179.99</td>
-										<td class="center">1</td>
-										<td class="right">$$179.99</td>
+										<td class="text-center">4</td>
+										<td>Gear IconX</td>
+										<td>New, 2018 version.</td>
+										<td class="text-center">$179.99</td>
+										<td class="text-center">1</td>
+										<td class="text-right">$179.99</td>
 									</tr>
 								</tbody>
 							</table>
@@ -172,28 +172,28 @@
 							<table class="table table-clear">
 								<tbody>
 									<tr>
-										<td class="left">
+										<td class="border-0">
 											<strong>Subtotal</strong>
 										</td>
-										<td class="right">$2109.96</td>
+										<td class="text-right border-0">$2109.96</td>
 									</tr>
 									<tr>
-										<td class="left">
+										<td>
 											<strong>Discount (10%)</strong>
 										</td>
-										<td class="right">$1793.466</td>
+										<td class="text-right">$1793.466</td>
 									</tr>
 									<tr>
-										<td class="left">
+										<td>
 											<strong>VAT (10%)</strong>
 										</td>
-										<td class="right">$210.996</td>
+										<td class="text-right">$210.996</td>
 									</tr>
 									<tr>
-										<td class="left">
-											<strong>Total</strong>
+										<td>
+											<strong>Grand Total</strong>
 										</td>
-										<td class="right">
+										<td class="text-right">
 											<strong>$2004.462</strong>
 										</td>
 									</tr>
@@ -202,7 +202,8 @@
 						</div>
 					</div>
 					<div class="row text-right">
-						<div class="col-10"></div>
+						<div class="col-7 d-none d-lg-block"></div>
+						<div class="col"><a href="../index.html" class="btn btn-light btn-block"><i class="fas fa-shopping-cart"></i> Continue Shopping</a></div>
 						<div class="col"><a href="cart.html" class="btn btn-primary btn-block">Back to cart</a></div>
 					</div>
 				</div>
