--- a/account/cart.html
+++ b/account/cart.html
@@ -107,6 +107,7 @@
 						</tr>
 					</thead>
 					<tbody>
+						<div id="item1">
 						<tr>
 							<td data-th="Product">
 								<div scope="row" class="row">
@@ -125,10 +126,11 @@
 							</td>
 							<td data-th="Subtotal" class="text-center">$999.99</td>
 							<td class="text-center"> 
-								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
-								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
+								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
 							</td>
 						</tr>
+						</div>
 						<tr>
 							<td data-th="Product">
 								<div scope="row" class="row">
@@ -148,8 +150,8 @@
 							<td data-th="Subtotal" class="text-center">$729.99</td>
 							</td>
 							<td class="text-center"> 
-								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
-								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
+								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 						<tr>
@@ -170,8 +172,8 @@
 							</td>
 							<td data-th="Subtotal" class="text-center">$199.99</td>
 							<td class="text-center"> 
-								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
-								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
+								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 						<tr>
@@ -192,8 +194,8 @@
 							</td>
 							<td data-th="Subtotal" class="text-center">$179.99</td>
 							<td class="text-center"> 
-								<a href="" class="btn btn-outline-success"><i class="fa fa-heart"></i></a> 
-								<a href="" class="btn btn-outline-danger"> <i class="fa fa-times"></i></a>
+								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
+								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 					</tbody>	
@@ -202,7 +204,7 @@
 						<tr>
 							<td colspan="3"></td>
 							<td class="text-center"><strong>Total $2109.96</strong></td>
-							<td><a href="bill.html" class="btn btn-primary btn-block">Checkout</a></td>
+							<td><a href="bill.html" class="btn btn-success btn-block">Checkout</a></td>
 						</tr>
 					</tfoot>
 				</table>
@@ -257,6 +259,7 @@
 			<div class="footer-copyright text-center py-2">© 2019 Copyright:</em> <strong style="color: white">Huy Nguyen Minh</strong></div>
 		</footer>
 		
+		<script type="text/javascript" src="../js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
