--- a/account/login.html
+++ b/account/login.html
@@ -111,7 +111,7 @@
 										<label class="form-check-label" for="exampleCheck1">Remember me</label>
 									</div>
 									<div class="text-center">
-										<button type="submit" class="btn btn-secondary">Sign in</button>
+										<button type="submit" class="btn btn-secondary pl-5 pr-5">Sign in</button>
 									</div>
 									<hr class="my-4">
 									<div class="row">
