--- a/device/phone.html
+++ b/device/phone.html
@@ -100,7 +100,7 @@
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 						<div class="card" style="max-width: 20rem;">
-							<img src="../image/device/note9.png" class="card-img-top" alt="Galaxy Note 9">
+							<a href="" data-toggle="modal" data-target="#product_view"><img src="../image/device/note9.png" class="card-img-top" alt="Galaxy Note 9"></a>
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Note 9</h5>
 								<h6 class="card-price">$ 999.99</h6>
@@ -330,6 +330,66 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="modal fade product_view py-5" id="product_view">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			            	<h4 class="modal-title">Galaxy Note 9</h4>
+			                <button type="button" class="close" data-dismiss="modal">&times;</button>   
+			            </div>
+			            <div class="modal-body">
+			                <div class="row">
+			                    <div class="col-md-6 product_img">
+			                        <img src="../image/device/note9.png" class="img-responsive">
+			                    </div>
+			                    <div class="col-md-6 product_content">
+			                        <h4>SM-N960F/DS</h4>
+			                        <div class="rating">
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            (26 reviews)
+			                        </div>
+			                        <p>What we see here are spec bumps, some more impressive than others. For one, it was about time a big-name top-end phone shipped with 128GB of base storage, and isn't the optional 512GB just plain overkill? With a card slot ready to offer an extra 512GB (a card that Samsung is yet to announce, and you're unlikely to be thrilled about the price, but still) you're looking at a potential 1TB of storage on your Note9.</p>
+			                        <h3 class="cost">$999.99 <small class="pre-cost"> $1099.99</small></h3>
+			                        <div class="row">
+			                            <div class="col-md-4 col-sm-6 col-xs-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="" selected="">Color</option>
+			                                    <option value="black">Black</option>
+			                                    <option value="white">White</option>
+			                                    <option value="gold">Blue</option>
+			                                    <option value="rose gold">Rose Gold</option>
+			                                </select>
+			                            </div>
+			                            <div class="col-md-4 col-sm-6 col-xs-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="">Capacity</option>
+			                                    <option value="">128GB</option>
+			                                    <option value="">512GB</option>
+			                                </select>
+			                            </div>
+			                            <div class="col-md-4 col-sm-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="" selected="">QTY</option>
+			                                    <option value="">1</option>
+			                                    <option value="">2</option>
+			                                    <option value="">3</option>
+			                                </select>
+			                            </div>
+			                        </div>
+			                        <div class="space-ten"></div>
+			                        <div class="text-right">
+			                            <button type="button" class="btn btn-primary">Add To Cart</button>
+			                        </div>
+			                    </div>
+			                </div>
+			            </div>
+			        </div>
+			    </div>
 			</div>
 		</main>
 		
