--- a/device/tablet.html
+++ b/device/tablet.html
@@ -100,7 +100,7 @@
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 						<div class="card" style="max-width: 20rem;">
-							<img src="../image/device/tabs4.png" class="card-img-top" alt="Galaxy Tab S4">
+							<a href="" data-toggle="modal" data-target="#product_view"><img src="../image/device/tabs4.png" class="card-img-top" alt="Galaxy Tab S4"></a>
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Tab S4</h5>
 								<h6 class="card-price">$ 749.99</h6>
@@ -174,6 +174,69 @@
 					
 				</div>
 			</div>
+
+			<div class="modal fade product_view py-5" id="product_view">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			            	<h4 class="modal-title">Galaxy Tab S4</h4>
+			                <button type="button" class="close" data-dismiss="modal">&times;</button>   
+			            </div>
+			            <div class="modal-body">
+			                <div class="row">
+			                    <div class="col-md-6 product_img">
+			                        <img src="../image/device/tabs4.png" class="img-responsive">
+			                    </div>
+			                    <div class="col-md-6 product_content">
+			                        <h4>SM-T835</h4>
+			                        <div class="rating">
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star"></i>
+			                            <i class="fas fa-star-half-alt"></i>
+			                            (7 reviews)
+			                        </div>
+			                        <p>Tablets never killed the PC, but they did change how we look at laptops - between keyboard add-ons and styluses, a modern 2-in-1 is an alleged Swiss knife of productivity. The Samsung Galaxy Tab S4 10.5 is bundled with an S Pen and you can get a Book Cover keyboard if you type more often than you sketch.</p>
+			                        <h3 class="cost">$749.99 <small class="pre-cost"> $849.99</small></h3>
+			                        <div class="row">
+			                            <div class="col-md-4 col-sm-6 col-xs-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="" selected="">Color</option>
+			                                    <option value="black">Black</option>
+			                                    <option value="white">White</option>
+			                                    <option value="gold">Gold</option>
+			                                    <option value="rose gold">Rose Gold</option>
+			                                </select>
+			                            </div>
+			                            <div class="col-md-4 col-sm-6 col-xs-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="">Capacity</option>
+			                                    <option value="">64GB</option>
+			                                    <option value="">128GB</option>
+			                                </select>
+			                            </div>
+			                            <div class="col-md-4 col-sm-12">
+			                                <select class="form-control" name="select">
+			                                    <option value="" selected="">QTY</option>
+			                                    <option value="">1</option>
+			                                    <option value="">2</option>
+			                                    <option value="">3</option>
+			                                </select>
+			                            </div>
+			                        </div>
+			                        <div class="space-ten"></div>
+			                        <div class="text-right">
+			                            <button type="button" class="btn btn-primary">Add To Cart</button>
+			                        </div>
+			                    </div>
+			                </div>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+
+
 		</main>
 		
 		<footer class="page-footer font-small pt-3 bg-dark information">
