--- a/device/phone.html
+++ b/device/phone.html
@@ -99,7 +99,7 @@
 				<h4 id="note">Galaxy Note series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<a href="" data-toggle="modal" data-target="#product_view"><img src="../image/device/note9.png" class="card-img-top" alt="Galaxy Note 9"></a>
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Note 9</h5>
@@ -116,7 +116,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/note8.png" class="card-img-top" alt="Galaxy Note 8">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Note 8</h5>
@@ -133,7 +133,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/notefe.png" class="card-img-top" alt="Galaxy Note FE">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Note FE</h5>
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/note5.png" class="card-img-top" alt="Galaxy Note 5">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Note 5</h5>
@@ -172,7 +172,7 @@
 				<h4 id="s">Galaxy S series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s9plus.png" class="card-img-top" alt="Galaxy S9 Plus">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S9 Plus</h5>
@@ -189,7 +189,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s9.png" class="card-img-top" alt="Galaxy S9">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S9</h5>
@@ -206,7 +206,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s8plus.png" class="card-img-top" alt="Galaxy S8">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S8 Plus</h5>
@@ -223,7 +223,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s8.png" class="card-img-top" alt="Galaxy S8">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S8</h5>
@@ -240,7 +240,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s7edge.png" class="card-img-top" alt="Galaxy S7 Edge">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S7 Edge</h5>
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/s7.png" class="card-img-top" alt="Galaxy S7">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy S7</h5>
@@ -273,13 +273,14 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 			<div class="container pb-3">
 				<h4 id="a">Galaxy A series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/a9.png" class="card-img-top" alt="Galaxy A9">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy A9</h5>
@@ -296,7 +297,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/a8.png" class="card-img-top" alt="Galaxy A8">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy A8 2018</h5>
@@ -313,7 +314,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/a7.png" class="card-img-top" alt="Galaxy A7">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy A7 2018</h5>
@@ -353,31 +354,31 @@
 			                            <i class="fas fa-star"></i>
 			                            (26 reviews)
 			                        </div>
-			                        <p>What we see here are spec bumps, some more impressive than others. For one, it was about time a big-name top-end phone shipped with 128GB of base storage, and isn't the optional 512GB just plain overkill? With a card slot ready to offer an extra 512GB (a card that Samsung is yet to announce, and you're unlikely to be thrilled about the price, but still) you're looking at a potential 1TB of storage on your Note9.</p>
+			                        <p class="text-justify">What we see here are spec bumps, some more impressive than others. For one, it was about time a big-name top-end phone shipped with 128GB of base storage, and isn't the optional 512GB just plain overkill? With a card slot ready to offer an extra 512GB (a card that Samsung is yet to announce, and you're unlikely to be thrilled about the price, but still) you're looking at a potential 1TB of storage on your Note9.</p>
 			                        <h3 class="cost">$999.99 <small class="pre-cost"> $1099.99</small></h3>
 			                        <div class="row">
 			                            <div class="col-md-4 col-sm-6 col-xs-12">
 			                                <select class="form-control" name="select">
-			                                    <option value="" selected="">Color</option>
-			                                    <option value="black">Black</option>
-			                                    <option value="white">White</option>
-			                                    <option value="gold">Blue</option>
+			                                    <option>Color</option>
+			                                    <option>Black</option>
+			                                    <option>White</option>
+			                                    <option>Blue</option>
 			                                    <option value="rose gold">Rose Gold</option>
 			                                </select>
 			                            </div>
 			                            <div class="col-md-4 col-sm-6 col-xs-12">
 			                                <select class="form-control" name="select">
 			                                    <option value="">Capacity</option>
-			                                    <option value="">128GB</option>
-			                                    <option value="">512GB</option>
+			                                    <option>128GB</option>
+			                                    <option>512GB</option>
 			                                </select>
 			                            </div>
 			                            <div class="col-md-4 col-sm-12">
 			                                <select class="form-control" name="select">
-			                                    <option value="" selected="">QTY</option>
-			                                    <option value="">1</option>
-			                                    <option value="">2</option>
-			                                    <option value="">3</option>
+			                                    <option>QTY</option>
+			                                    <option >1</option>
+			                                    <option>2</option>
+			                                    <option >3</option>
 			                                </select>
 			                            </div>
 			                        </div>
