--- a/device/tablet.html
+++ b/device/tablet.html
@@ -99,7 +99,7 @@
 				<h4 id="tab">Galaxy Tab series</h4>
 				<div class="row">
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<a href="" data-toggle="modal" data-target="#product_view"><img src="../image/device/tabs4.png" class="card-img-top" alt="Galaxy Tab S4"></a>
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Tab S4</h5>
@@ -116,7 +116,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/tabs3.png" class="card-img-top" alt="Galaxy Tab S3">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Tab S3</h5>
@@ -133,7 +133,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/taba10.5.png" class="card-img-top" alt="Galaxy Tab A 10.5">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Tab A 10.5</h5>
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-						<div class="card" style="max-width: 20rem;">
+						<div class="card">
 							<img src="../image/device/taba6.png" class="card-img-top" alt="Galaxy Tab A6">
 							<div class="card-body">
 								<h5 class="card-title">Galaxy Tab A6</h5>
@@ -170,11 +170,9 @@
 			</div>
 			<div class="container pb-3">
 				<h4 id="book"></h4>
-				<div class="row">
-					
+				<div class="row">			
 				</div>
 			</div>
-
 			<div class="modal fade product_view py-5" id="product_view">
 			    <div class="modal-dialog">
 			        <div class="modal-content">
@@ -197,31 +195,31 @@
 			                            <i class="fas fa-star-half-alt"></i>
 			                            (7 reviews)
 			                        </div>
-			                        <p>Tablets never killed the PC, but they did change how we look at laptops - between keyboard add-ons and styluses, a modern 2-in-1 is an alleged Swiss knife of productivity. The Samsung Galaxy Tab S4 10.5 is bundled with an S Pen and you can get a Book Cover keyboard if you type more often than you sketch.</p>
+			                        <p class="text-justify">Tablets never killed the PC, but they did change how we look at laptops - between keyboard add-ons and styluses, a modern 2-in-1 is an alleged Swiss knife of productivity. The Samsung Galaxy Tab S4 10.5 is bundled with an S Pen and you can get a Book Cover keyboard if you type more often than you sketch.</p>
 			                        <h3 class="cost">$749.99 <small class="pre-cost"> $849.99</small></h3>
 			                        <div class="row">
 			                            <div class="col-md-4 col-sm-6 col-xs-12">
 			                                <select class="form-control" name="select">
-			                                    <option value="" selected="">Color</option>
-			                                    <option value="black">Black</option>
-			                                    <option value="white">White</option>
-			                                    <option value="gold">Gold</option>
-			                                    <option value="rose gold">Rose Gold</option>
+			                                    <option>Color</option>
+			                                    <option>Black</option>
+			                                    <option>White</option>
+			                                    <option>Gold</option>
+			                                    <option>Rose Gold</option>
 			                                </select>
 			                            </div>
 			                            <div class="col-md-4 col-sm-6 col-xs-12">
 			                                <select class="form-control" name="select">
-			                                    <option value="">Capacity</option>
-			                                    <option value="">64GB</option>
-			                                    <option value="">128GB</option>
+			                                    <option>Capacity</option>
+			                                    <option >64GB</option>
+			                                    <option>128GB</option>
 			                                </select>
 			                            </div>
 			                            <div class="col-md-4 col-sm-12">
 			                                <select class="form-control" name="select">
-			                                    <option value="" selected="">QTY</option>
-			                                    <option value="">1</option>
-			                                    <option value="">2</option>
-			                                    <option value="">3</option>
+			                                    <option>QTY</option>
+			                                    <option>1</option>
+			                                    <option>2</option>
+			                                    <option>3</option>
 			                                </select>
 			                            </div>
 			                        </div>
@@ -235,8 +233,6 @@
 			        </div>
 			    </div>
 			</div>
-
-
 		</main>
 		
 		<footer class="page-footer font-small pt-3 bg-dark information">
