--- a/account/cart.html
+++ b/account/cart.html
@@ -127,7 +127,7 @@
 							<td data-th="Subtotal" class="text-center">$999.99</td>
 							<td class="text-center"> 
 								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
-								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
+								<button class="btn btn-outline-danger" id="remove"><i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 						</div>
@@ -151,7 +151,7 @@
 							</td>
 							<td class="text-center"> 
 								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
-								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
+								<button class="btn btn-outline-danger" id="remove"><i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 						<tr>
@@ -173,7 +173,7 @@
 							<td data-th="Subtotal" class="text-center">$199.99</td>
 							<td class="text-center"> 
 								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
-								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
+								<button class="btn btn-outline-danger" id="remove"><i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 						<tr>
@@ -195,7 +195,7 @@
 							<td data-th="Subtotal" class="text-center">$179.99</td>
 							<td class="text-center"> 
 								<button class="btn btn-outline-success"><i class="fa fa-heart"></i></button> 
-								<button class="btn btn-outline-danger"> <i class="fa fa-times"></i></button>
+								<button class="btn btn-outline-danger" id="remove"><i class="fa fa-times"></i></button>
 							</td>
 						</tr>
 					</tbody>	
@@ -257,11 +257,11 @@
 
 		<footer class="page-footer font-small copyright" style="background-color: #202325">
 			<div class="footer-copyright text-center py-2">© 2019 Copyright:</em> <strong style="color: white">Huy Nguyen Minh</strong></div>
-		</footer>
+		</footer>	
 		
-		<script type="text/javascript" src="../js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script language="JavaScript" type="text/javascript" src="../js/script.js"></script>
 	</body>
 </html>
