--- a/device/phone.html
+++ b/device/phone.html
@@ -384,7 +384,7 @@
 			                        </div>
 			                        <div class="space-ten"></div>
 			                        <div class="text-right">
-			                            <button type="button" class="btn btn-primary">Add To Cart</button>
+			                            <button type="button" class="btn btn-primary">Add to cart</button>
 			                        </div>
 			                    </div>
 			                </div>
