--- a/device/tablet.html
+++ b/device/tablet.html
@@ -225,7 +225,7 @@
 			                        </div>
 			                        <div class="space-ten"></div>
 			                        <div class="text-right">
-			                            <button type="button" class="btn btn-primary">Add To Cart</button>
+			                            <button type="button" class="btn btn-primary">Add to cart</button>
 			                        </div>
 			                    </div>
 			                </div>
