--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 	
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+			<div class="view text-center"></div>
+			<nav id="nav-index" class="navbar navbar-expand-md navbar-dark">
 				<a class="navbar-brand" href="index.html"><b>SAMfan Shop</b></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button id="index-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -95,7 +96,7 @@
 			</nav>
 		</header>
 		
-		<main>		
+		<main class="ind">		
 			<div id="image" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#image" data-slide-to="0" class="active"></li>
